# hh-vacancy-parser

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_04e2950766bc0f15___init___py.html  z_04e2950766bc0f15_base_api_py.html  z_04e2950766bc0f15_hh_api_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html  z_be33447ec0521d52___init___py.html  z_be33447ec0521d52_base_json_saver_py.html  z_be33447ec0521d52_json_saver_py.html
src/: main.py  utils.py  vacancy.py
src/api/: base_api.py  hh_api.py
src/storage/: base_json_saver.py  json_saver.py
tests/: test_hh_api.py  test_json_saver.py  test_utils.py  test_vacancy.py
