[project]
name = "hh-vacancy-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Semyon Shtelman",email = "shtelmaan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.12.0"
isort = "^7.0.0"
myp = "^1.5.8"

[tool.black]
line-length = 119
exclude = """
(
.git
)
"""
[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warm_return_any = true
ignore_missing_imports = true
exclude = """
(
venv
)
"""